Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/6943278/T6943278.out
T6943278.java:7:35: compiler.err.cant.resolve: kindname.class, NonExistentInterface, , 
T6943278.java:9:25: compiler.err.cant.resolve.location: kindname.class, NonExistentInterface, , , (compiler.misc.location: kindname.class, T6943278<X>, null)
2 errors
